[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
lazy_static = "1.4"
command-ext = { git = "https://github.com/YdrMaster/command-ext.git", rev = "f25befb" }
